--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -8,7 +8,11 @@ on:
   schedule:
     - cron: '15 6 * * 0' # At 06:15 on Sunday
   workflow_dispatch:
-
+      inputs:
+        environment:
+          description: 'Environment to deploy to'
+          type: environment
+          required: true
 jobs:
   Build:
     runs-on: ubuntu-latest
